<resources>
    <string name="app_name">ReciclerView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="see">See Recepies</string>
    <string name="previous">Previous</string>

    <string name="title">Recepie Ark</string>
    <string name="ingredients">Ingredients:</string>
    <string name="description">Description:</string>
    <string name="type">Type:</string>
    <string name="recepieTitle">Title:</string>
    <string name="title_activity_idk">idk</string>
    <string name="next">Next</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">SAVE</string>
    <string name="descriptionInput">Description</string>
    <string name="ingredientsInput">Ingredients</string>
    <string name="typeInput">Type</string>
    <string name="titleInput">Title</string>
</resources>