<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFF2D">

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="282dp"
        android:hint="@string/titleInput"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/descInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/typeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="169dp"
        android:layout_marginBottom="82dp"
        android:hint="@string/typeInput"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/ingredientsInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />

    <EditText
        android:id="@+id/ingredientsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="136dp"
        android:hint="@string/ingredientsInput"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/descInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeInput" />

    <EditText
        android:id="@+id/descInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="455dp"
        android:hint="@string/descriptionInput"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsInput" />
</androidx.constraintlayout.widget.ConstraintLayout>