<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFF2D"
    tools:context=".SecondFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

<!--    <Button-->
<!--        android:id="@+id/button_second"-->
<!--        android:layout_width="222dp"-->
<!--        android:layout_height="59dp"-->
<!--        android:background="#A80652"-->
<!--        android:text="@string/see"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="30dp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="57dp"
        android:layout_height="139dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="374dp"
        android:layout_marginLeft="374dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="48dp"
        app:backgroundTint="#A80652"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:maxImageSize="24dp"
        app:srcCompat="@drawable/add" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:background="#FBFF2D"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="225dp">

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="282dp"
            android:hint="@string/titleInput"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/descInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107" />

        <EditText
            android:id="@+id/typeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="169dp"
            android:layout_marginBottom="82dp"
            android:hint="@string/typeInput"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/ingredientsInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.906"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleInput" />

        <EditText
            android:id="@+id/ingredientsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="136dp"
            android:hint="@string/ingredientsInput"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/descInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeInput" />

        <EditText
            android:id="@+id/descInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="102dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="455dp"
            android:hint="@string/descriptionInput"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsInput" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>